            \item In \code{etable}, the variable names of non-Latex output can now be changed.
            \item You can use the argument \code{n} when applying summary to choose the number of coefficients to display.
            \item Argument \code{confirm} has been removed from the function \code{interact}.
        }
    }

    \subsection{Methods}{
        \itemize{
            \item The \code{residuals} method has been substantially improved, now allowing different types.
            \item New stats methods: sigma, deviance, weights.
        }
    }

    \subsection{Vignette and Readme}{
        \itemize{
            \item Typos corrected.
            \item Images in the Readme set to 1200px.
        }
    }

    \subsection{Error-handling}{
        \itemize{
            \item Improved error-handling with dreamerr's functions.
        }
    }

    \subsection{Other}{
        \itemize{
            \item MASS dependenvy is removed.
        }
    }
}

\section{Changes in version 0.4.1 (2020-04-13)}{
  \subsection{Bug fixes}{
  \itemize{
    \item Major bug leading R to crash when using non-linear-in-parameters right-hand-sides in feNmlm. Only occured when some observations were removed from the data set (due to NAness or to perfect fit). [Thanks to @marissachilds, GH issue #17.]
    \item In the \code{collinearity} help pages: an example could lead to an error (due to random data generation). It has been removed.
    \item In \code{collinearity}, corrected the problem of display of the intercept in some situations.
    \item Defaults for the arguments \code{cex} and \code{lwd} in \code{coefplot} have been changed to 1 and 1 (instead of par("cex") and par("lwd")). Otherwise this led to the creation of \code{Rplots.pdf} in the working directory (thanks to Kurt Hornik).
    \item Corrected a typo in the article's title in the vignette.
    }
  }

  \subsection{Help}{
  \itemize{